tests/error/comptime/pointer_difference11.bz
function test()
{
	(consteval {
		consteval t = [ 0, "", 0 ];
		&t[0] - &t[2];
	});
}
